# django-backend-core

./: Makefile  README.md  README.rst  pyproject.toml
core/project/: settings.py
project/: settings.py
